# AlienInvasion

./: .check.sh  Makefile  README.md  check.sh  dockerfile  pyproject.toml  setup.cfg
.github/workflows/: python-tests.yml  tests.yml
alieninvasion/: alien.py  alien_invasion.py  bonus.py  bullet.py  button.py  explosion.py  game_stats.py  scoreboard.py  settings.py  ship.py
