[tool.poetry]
name = "alieninvasion"
version = "0.1.0"
description = "Juego tipo Space Invaders para aprender pygame"
authors = ["sertemo <tejedor.moreno@gmail.com>"]
readme = "README.md"
packages = [{include = "alieninvasion"}]

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.2"
mypy = "^1.9.0"
flake8 = "^7.0.0"
icecream = "^2.1.3"
black = "^24.3.0"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Añadimos configuración de mypy
[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

# Configuración pytest
[tool.pytest.ini_options]
testpaths = [
    "tests",
]
